samples/_failures_safe/1761460177_5cedc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_118dc1ec.c: In function ‘main’:
./samples/SAFE/__tmp_118dc1ec.c:169:25: error: missing terminating " character
  169 |         fprintf(stderr, "Error reading input\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_118dc1ec.c:169:9: error: expected expression at end of input
  169 |         fprintf(stderr, "Error reading input\n
      |         ^~~~~~~
./samples/SAFE/__tmp_118dc1ec.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_118dc1ec.c:169:9: error: expected declaration or statement at end of input
